mesa (11.1.1-2~bpo8+1) UNRELEASED; urgency=medium

  * Rebuild for jessie-backports.
  * Rebuild against llvm-3.5.
  * Use libclc version from jessie.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Tue, 17 Nov 2015 11:54:23 +0100

mesa (11.1.1-2) unstable; urgency=medium

  * Limit the symbols glXGetDriverConfig and glXGetScreenDriver to
    arch=!hurd-any (Fixes FTBFS on hurd).

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Fri, 15 Jan 2016 18:44:52 +0100

mesa (11.1.1-1) experimental; urgency=medium

  * New upstream release.
  * Enable support for virgl (Closes: #807774).
  * Enable support for vc4 (Closes: #809406).
  * Enable support for freedreno on arm64.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Thu, 14 Jan 2016 11:27:28 +0100

mesa (11.1.0-1) experimental; urgency=medium

  * New upstream release.
  * Add a patch to remove the unused symbol
    _glapi_create_table_from_handle from libGL.so.1.
  * Replace shlibs file with a symbols file for libgl1-mesa-glx.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Tue, 15 Dec 2015 20:24:10 +0100

mesa (11.1.0~rc3-1) experimental; urgency=medium

  * New upstream release candidate.
  * Bump libdrm-dev build-dep to 2.4.65.
  * Update symbols for libgles2-mesa and libxatracker2.
  * Remove Breaks/Conflicts/Provides/Replaces from pre-wheezy.
  * Remove duplicated field "Priority" from package libgl1-mesa-dri.
  * Declare Multi-Arch: same for mesa-opencl-icd{,-dbg} (Closes:
    #804919).
  * Add a Lintian override for symbols-declares-dependency-on-other-
    package libgbm1-private.
  * Remove obsolete libgl1-mesa-dri.lintian-overrides.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Thu, 10 Dec 2015 12:22:54 +0100

mesa (11.0.8-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 22 Dec 2015 16:12:35 +0200

mesa (11.0.7-1) unstable; urgency=medium

  [ Julien Cristau ]
  * Update debian/copyright from docs/license.html (closes: #806805).  Thanks,