@@ -39,8 +39,8 @@ Build-Depends:
  libudev-dev [linux-any],
  flex,
  bison,
- llvm-3.5-dev (>= 1:3.5~) [amd64 i386 kfreebsd-amd64 kfreebsd-i386 armhf ppc64el],
- libelf-dev [amd64 i386 kfreebsd-amd64 kfreebsd-i386 armhf ppc64el],
+ llvm-3.5-dev (>= 1:3.5~) [amd64 i386 kfreebsd-amd64 kfreebsd-i386 armhf],
+ libelf-dev [amd64 i386 kfreebsd-amd64 kfreebsd-i386 armhf],
  libwayland-dev (>= 1.2.0) [linux-any],
  libclang-3.5-dev (>= 1:3.5~) [amd64 i386 armhf],
  libclc-dev [amd64 i386 armhf],
