@@ -89,6 +89,13 @@ else
 	DRI_DRIVERS += i915 i965
   endif
 
+  # Do not build llvmpipe for armhf, it regresses compared to the classic swrast.
+  ifneq (,$(filter $(DEB_HOST_ARCH),amd64 i386 kfreebsd-amd64 kfreebsd-i386))
+	GALLIUM_DRIVERS += swrast
+  else
+	DRI_DRIVERS += swrast
+  endif
+
   ifeq (,$(filter $(DEB_HOST_ARCH), s390 s390x))
     DRI_DRIVERS += r200 radeon
     GALLIUM_DRIVERS += r600 r300
@@ -102,13 +109,10 @@ else
   endif
 
   # LLVM is required for r300g, radeonsi and llvmpipe:
-  ifneq (,$(filter $(DEB_HOST_ARCH),amd64 i386 kfreebsd-amd64 kfreebsd-i386 armhf ppc64el))
+  ifneq (,$(filter $(DEB_HOST_ARCH),amd64 i386 kfreebsd-amd64 kfreebsd-i386 armhf))
 	GALLIUM_DRIVERS += radeonsi
 	confflags_GALLIUM += --enable-gallium-llvm
 	confflags_GALLIUM += ac_cv_path_LLVM_CONFIG=llvm-config-3.5
-	GALLIUM_DRIVERS += swrast
-  else
-	DRI_DRIVERS += swrast
   endif
 
 	confflags_DIRECT_RENDERING = --enable-driglx-direct
